--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
     --bg-nav: #121217;
     --text-nav: #fafafa;
 
-    --shadow-primary: rgb(223, 171, 33, 0.6) 0 0 10px;
+    --shadow-primary: rgba(184, 27, 29, 0.6) 0 0 10px;
     --shadow-white: rgb(250, 250, 250, 0.6) 0 0 10px;
 
     --border-color: #dadada;
