--- a/src/pages/veiculos/Veiculos.css
+++ b/src/pages/veiculos/Veiculos.css
@@ -167,7 +167,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: var(--background-color);
+    color: var(--text-color);
     font-weight: 800;
 }
 
