--- a/src/pages/ver-mais/VerMais.css
+++ b/src/pages/ver-mais/VerMais.css
@@ -343,7 +343,7 @@
     border: none;
     border-radius: 8px;
     padding: 8px;
-    color: var(--background-color);
+    color: var(--text-color);
     font-size: 16px;
     font-weight: 600;
     margin-top: 12px;
