--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
     --bg-nav: #fff;
     --text-nav: #121217;
 
-    --shadow-primary: rgb(223, 171, 33, 0.6) 0 0 10px;
+    --shadow-primary: rgba(49, 60, 105, 0.6) 0 0 20px;
     --shadow-white: rgb(250, 250, 250, 0.6) 0 0 10px;
 
     --border-color: #ccc;
